# kafka-htmx

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
app/templates/: index.html
kafka_htmx/: __init__.py
tests/: test_app.py
