[tool.poetry]
name = "kafka-htmx"
version = "0.1.0"
description = ""
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
kafka-python = {git = "https://github.com/dpkp/kafka-python.git"}
pytest = "^7.4.4"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
