[tool.poetry]
name = "kafka-htmx"
version = "0.1.0"
description = ""
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
kafka-python = {git = "https://github.com/dpkp/kafka-python.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
pytest-mock = "^3.12.0"

[[tool.poetry.packages]]
include = "kafka_htmx/*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
